--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.ammacias.tectium.MainActivity">
 
-    <FrameLayout
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/message"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_marginRight="59dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="59dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="57dp"
+        app:layout_constraintBottom_toTopOf="@+id/Iniciarsesión"
+        android:hint="@string/password"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="59dp"
+        tools:layout_constraintLeft_creator="1"
+        android:inputType="textPassword"/>
 
-    </FrameLayout>
+    <EditText
+        android:id="@+id/user"
+        android:layout_width="0dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="31dp"
+        android:layout_marginLeft="59dp"
+        android:layout_marginRight="59dp"
+        app:layout_constraintBottom_toTopOf="@+id/password"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="@string/user"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="59dp"
+        tools:layout_constraintLeft_creator="1" />
 
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/navigation" />
+    <Button
+        android:id="@+id/Iniciarsesión"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginLeft="59dp"
+        android:layout_marginRight="59dp"
+        android:text="@string/log"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="23dp"
+        app:layout_constraintBottom_toTopOf="@+id/helpLogin"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="59dp"
+        android:layout_marginEnd="59dp"
+        tools:layout_constraintLeft_creator="1" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/helpLogin"
+        android:layout_width="0dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
+        android:text="@string/help_login_text"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.588"
+        android:layout_marginBottom="49dp"
+        app:layout_constraintBottom_toTopOf="@+id/login_button"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        tools:layout_constraintLeft_creator="1" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="178dp"
+        android:layout_height="26dp"
+        android:layout_centerInParent="true"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="128dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+
+</android.support.constraint.ConstraintLayout>
