--- a/app/src/main/res/layout/fragment_evento_item.xml
+++ b/app/src/main/res/layout/fragment_evento_item.xml
@@ -17,106 +17,109 @@
             android:layout_height="match_parent">
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/precio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
-                tools:layout_editor_absoluteY="203dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
+                android:text="TextView"
+                app:layout_constraintLeft_toRightOf="@+id/img_precio"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/imageView8"
-                android:layout_marginLeft="8dp" />
+                tools:layout_editor_absoluteY="203dp" />
 
             <TextView
-                android:id="@+id/textView7"
+                android:id="@+id/fecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:text="TextView"
-                app:layout_constraintLeft_toRightOf="@+id/imageView7"
+                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
                 tools:layout_editor_absoluteY="203dp" />
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/compartir"
                 android:layout_width="34dp"
                 android:layout_height="25dp"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                tools:layout_editor_absoluteY="11dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toRightOf="@+id/imageView9"
                 android:layout_marginLeft="8dp"
-                app:layout_constraintHorizontal_bias="0.0" />
+                android:layout_marginRight="8dp"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintLeft_toRightOf="@+id/fav"
+                app:layout_constraintRight_toRightOf="parent"
+                app:srcCompat="@mipmap/ic_launcher_round"
+                tools:layout_editor_absoluteY="11dp" />
 
             <ImageView
-                android:id="@+id/imageView9"
+                android:id="@+id/fav"
                 android:layout_width="34dp"
                 android:layout_height="25dp"
                 app:srcCompat="@mipmap/ic_launcher_round"
                 tools:layout_editor_absoluteY="11dp"
-                app:layout_constraintLeft_toRightOf="@+id/textView2"
+                app:layout_constraintLeft_toRightOf="@+id/nombre"
                 android:layout_marginLeft="64dp" />
 
             <ImageView
-                android:id="@+id/imageView8"
+                android:id="@+id/img_precio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@mipmap/ic_launcher_round"
                 tools:layout_editor_absoluteX="229dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                app:layout_constraintTop_toBottomOf="@+id/descripcion" />
 
             <ImageView
-                android:id="@+id/imageView7"
+                android:id="@+id/img_fecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:srcCompat="@mipmap/ic_launcher_round"
                 android:layout_marginLeft="34dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView4" />
+                app:layout_constraintTop_toBottomOf="@+id/descripcion" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/descripcion"
                 android:layout_width="343dp"
                 android:layout_height="57dp"
                 android:text="TextView"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/imageView4"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent"
+                android:layout_marginTop="22dp"
+                app:layout_constraintTop_toBottomOf="@+id/foto"
+                android:layout_marginLeft="0dp"
+                app:layout_constraintLeft_toLeftOf="@+id/foto"
                 android:layout_marginRight="8dp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.555" />
+                app:layout_constraintHorizontal_bias="0.0" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/sitio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TextView"
+                android:layout_marginLeft="33dp"
                 android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@+id/textView2"
-                app:layout_constraintLeft_toRightOf="@+id/imageView4"
-                android:layout_marginLeft="33dp" />
+                android:text="TextView"
+                app:layout_constraintLeft_toRightOf="@+id/foto"
+                app:layout_constraintTop_toBottomOf="@+id/nombre" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/nombre"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
                 tools:layout_editor_absoluteY="16dp"
-                app:layout_constraintLeft_toRightOf="@+id/imageView4"
-                android:layout_marginLeft="33dp" />
+                app:layout_constraintLeft_toRightOf="@+id/foto"
+                android:layout_marginLeft="35dp" />
 
             <ImageView
-                android:id="@+id/imageView4"
+                android:id="@+id/foto"
                 android:layout_width="112dp"
                 android:layout_height="103dp"
                 app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
-                tools:layout_editor_absoluteX="10dp"
-                tools:layout_editor_absoluteY="11dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent" />
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
+
 
 </android.support.constraint.ConstraintLayout>
