--- a/app/src/main/res/layout/fragment_evento_item.xml
+++ b/app/src/main/res/layout/fragment_evento_item.xml
@@ -3,122 +3,131 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:background="#333333"
+    android:layout_marginBottom="10dp"
+    android:layout_marginTop="10dp">
 
     <android.support.v7.widget.CardView
         android:layout_width="368dp"
-        android:layout_height="495dp"
-        tools:layout_editor_absoluteY="8dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/precio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:text="TextView"
-                app:layout_constraintLeft_toRightOf="@+id/img_precio"
-                app:layout_constraintRight_toRightOf="parent"
-                tools:layout_editor_absoluteY="203dp" />
+        <TextView
+            android:id="@+id/precio"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toRightOf="@+id/img_precio"
+            app:layout_constraintTop_toTopOf="@+id/img_precio" />
 
-            <TextView
-                android:id="@+id/fecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:text="TextView"
-                app:layout_constraintLeft_toRightOf="@+id/img_fecha"
-                tools:layout_editor_absoluteY="203dp" />
+        <TextView
+            android:id="@+id/fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+            app:layout_constraintTop_toTopOf="@+id/img_fecha" />
 
-            <ImageView
-                android:id="@+id/compartir"
-                android:layout_width="34dp"
-                android:layout_height="25dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintLeft_toRightOf="@+id/fav"
-                app:layout_constraintRight_toRightOf="parent"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                tools:layout_editor_absoluteY="11dp" />
+        <ImageView
+            android:id="@+id/compartir"
+            android:layout_width="34dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toRightOf="@+id/fav"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher_round" />
 
-            <ImageView
-                android:id="@+id/fav"
-                android:layout_width="34dp"
-                android:layout_height="25dp"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                tools:layout_editor_absoluteY="11dp"
-                app:layout_constraintLeft_toRightOf="@+id/nombre"
-                android:layout_marginLeft="64dp" />
+        <ImageView
+            android:id="@+id/fav"
+            android:layout_width="34dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="64dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/nombre"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@mipmap/ic_launcher_round" />
 
-            <ImageView
-                android:id="@+id/img_precio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                tools:layout_editor_absoluteX="229dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/descripcion" />
+        <ImageView
+            android:id="@+id/img_precio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="169dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toRightOf="@+id/img_fecha"
+            app:layout_constraintTop_toBottomOf="@+id/descripcion"
+            app:srcCompat="@mipmap/ic_launcher_round" />
 
-            <ImageView
-                android:id="@+id/img_fecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@mipmap/ic_launcher_round"
-                android:layout_marginLeft="34dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/descripcion" />
+        <ImageView
+            android:id="@+id/img_fecha"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="34dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/descripcion"
+            app:srcCompat="@mipmap/ic_launcher_round" />
 
-            <TextView
-                android:id="@+id/descripcion"
-                android:layout_width="343dp"
-                android:layout_height="57dp"
-                android:text="TextView"
-                android:layout_marginTop="22dp"
-                app:layout_constraintTop_toBottomOf="@+id/foto"
-                android:layout_marginLeft="0dp"
-                app:layout_constraintLeft_toLeftOf="@+id/foto"
-                android:layout_marginRight="8dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.0" />
+        <TextView
+            android:id="@+id/descripcion"
+            android:layout_width="343dp"
+            android:layout_height="57dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="22dp"
+            android:text="TextView"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/foto" />
 
-            <TextView
-                android:id="@+id/sitio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="33dp"
-                android:layout_marginTop="20dp"
-                android:text="TextView"
-                app:layout_constraintLeft_toRightOf="@+id/foto"
-                app:layout_constraintTop_toBottomOf="@+id/nombre" />
+        <TextView
+            android:id="@+id/sitio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="33dp"
+            android:layout_marginTop="20dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toRightOf="@+id/foto"
+            app:layout_constraintTop_toBottomOf="@+id/nombre" />
 
-            <TextView
-                android:id="@+id/nombre"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                tools:layout_editor_absoluteY="16dp"
-                app:layout_constraintLeft_toRightOf="@+id/foto"
-                android:layout_marginLeft="35dp" />
+        <TextView
+            android:id="@+id/nombre"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="35dp"
+            android:layout_marginTop="8dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toRightOf="@+id/foto"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/foto"
-                android:layout_width="112dp"
-                android:layout_height="103dp"
-                app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+        <ImageView
+            android:id="@+id/foto"
+            android:layout_width="112dp"
+            android:layout_height="103dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait" />
         </android.support.constraint.ConstraintLayout>
-
     </android.support.v7.widget.CardView>
 
 
