--- a/app/src/main/res/layout/fragment_evento_item.xml
+++ b/app/src/main/res/layout/fragment_evento_item.xml
@@ -9,6 +9,20 @@
     android:layout_marginBottom="10dp"
     android:layout_marginTop="10dp">
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <android.support.v7.widget.CardView
         android:layout_width="368dp"
         android:layout_height="wrap_content"
@@ -16,7 +30,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="0dp"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        android:id="@+id/cardView">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -59,11 +74,11 @@
             android:id="@+id/fav"
             android:layout_width="34dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="64dp"
+            android:layout_marginLeft="52dp"
             android:layout_marginTop="8dp"
             app:layout_constraintLeft_toRightOf="@+id/nombre"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@mipmap/ic_launcher_round" />
+            app:srcCompat="@drawable/heart" />
 
         <ImageView
             android:id="@+id/img_precio"
