--- a/app/src/main/res/layout/fragment_evento_item.xml
+++ b/app/src/main/res/layout/fragment_evento_item.xml
@@ -111,7 +111,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/foto" />
+            app:layout_constraintTop_toBottomOf="@+id/fotoEvento" />
 
         <TextView
             android:id="@+id/sitio"
@@ -120,7 +120,7 @@
             android:layout_marginLeft="33dp"
             android:layout_marginTop="20dp"
             android:text="TextView"
-            app:layout_constraintLeft_toRightOf="@+id/foto"
+            app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
             app:layout_constraintTop_toBottomOf="@+id/nombre" />
 
         <TextView
@@ -130,11 +130,11 @@
             android:layout_marginLeft="35dp"
             android:layout_marginTop="8dp"
             android:text="TextView"
-            app:layout_constraintLeft_toRightOf="@+id/foto"
+            app:layout_constraintLeft_toRightOf="@+id/fotoEvento"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/foto"
+            android:id="@+id/fotoEvento"
             android:layout_width="112dp"
             android:layout_height="103dp"
             android:layout_marginLeft="8dp"
