--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:hint="@string/user"
+        android:text="anto_albaida@hotmail.com"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="59dp"
         android:layout_marginEnd="59dp"
