--- a/app/src/main/res/layout/fragment_ownevent_list.xml
+++ b/app/src/main/res/layout/fragment_ownevent_list.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.ammacias.tectium.Fragments.EventoFragment"
+    android:name="com.ammacias.tectium.Recycler.OwnEventFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="16dp"
+    android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.ammacias.tectium.Recycler.EventoFragment"
-    tools:listitem="@layout/fragment_evento_item" />
-
+    tools:context="com.ammacias.tectium.Recycler.OwnEventFragment"
+    tools:listitem="@layout/fragment_ownevent_item" />
